adding website links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="google-site-verification" content="p3LmX1w_u_LRA1Nqm1diRKm6-Z3t7I7coVARpOXaZfs" />
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://khuyen-mai-8xbet-vn.vercel.app/
+  <meta property="og:url" content="https://dang-nhap-8xbet-vi.vercel.app/
   ">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Đăng Nhập Tài Khoản 8xbet – Trải Nghiệm Giải Trí Không Giới Hạn
@@ -31,8 +31,8 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="https://khuyen-mai-8xbet-vn.vercel.app/">
-  <meta property="twitter:url" content="https://khuyen-mai-8xbet-vn.vercel.app/">
+  <meta property="twitter:domain" content="https://dang-nhap-8xbet-vi.vercel.app/">
+  <meta property="twitter:url" content="https://dang-nhap-8xbet-vi.vercel.app/">
   <meta name="twitter:title" content="Đăng Nhập Tài Khoản 8xbet – Trải Nghiệm Giải Trí Không Giới Hạn
 
 ">
@@ -40,7 +40,7 @@
     content="8xbet đã khẳng định mình là một nền tảng giải trí trực tuyến uy tín và hiện đại, nơi người chơi có thể tận hưởng những phút giây thư giãn với hàng loạt trò chơi thú vị. ">
   <meta name="twitter:image" content="">
 
-  <link rel="canonical" href="https://khuyen-mai-8xbet-vn.vercel.app/">
+  <link rel="canonical" href="https://dang-nhap-8xbet-vi.vercel.app/">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
