added button link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
       </p>
-      <a class="btn btn-primary btn-lg" href="https://8xbetvt.com/" role="button">8xbet</a>
+      <a class="btn btn-primary btn-lg" href="https://8xbet.international/" role="button">8xbet</a>
     </div>
   </div>
 
@@ -139,7 +139,7 @@
       <div class="col-md-12 mb-4">
         <h2 class="text-primary">Kết Luận</h2>
         <p class="text-justify"> Việc <a
-            href="https://8xbetvt.com/tim-hieu-ve-cac-khuyen-mai-hap-dan-tu-nha-cai-uy-tin-8xbet/">đăng nhập 8xbet</a>
+            href="https://8xbet.international/dang-nhap-tai-8xbet/">đăng nhập 8xbet</a>
             không chỉ đơn giản mà còn giúp bạn khám phá thế giới giải trí trực tuyến đầy thú vị. Với sự đa dạng trong các trò chơi và các chương trình ưu đãi hấp dẫn, đây chắc chắn là nơi mang lại cho bạn những phút giây thư giãn tuyệt vời. Hãy đăng nhập ngay hôm nay để bắt đầu hành trình trải nghiệm không giới hạn cùng 8xbet.
 </p>
       </div>
